test/src/e2e_vm_tests/test_programs/should_fail/ref_mut_mismatch/src/main.sw
script;

fn foo(ref mut y: u64) {
    y = 1;
}

fn main() {
    let x = 1;
    foo(x);

    foo(0);
}
